@@ -399,8 +399,7 @@ ACE_Reactor::timer_queue (ACE_Timer_Queue *tq)
 ACE_Timer_Queue *
 ACE_Reactor::timer_queue (void) const
 {
-  ACE_Reactor_Impl *impl = this->implementation_;
-  return impl->timer_queue ();
+  return this->implementation ()->timer_queue ();
 }
 
 int
